--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "ApiRest en express",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js",
+    "strart": "node index.js",
+    "lint": "eslint"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,12 @@
   "bugs": {
     "url": "https://github.com/ervcdev/ApiRestExpress/issues"
   },
-  "homepage": "https://github.com/ervcdev/ApiRestExpress#readme"
+  "homepage": "https://github.com/ervcdev/ApiRestExpress#readme",
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5"
+  }
 }
